# motion_annotation

./: CMakeLists.txt  LICENSE.txt  README.md
include/motion_annotation/: box_selection.h  contour_selection.h  motion_logger.h  video_interaction.h
src/: box_selection.cpp  contour_selection.cpp  image_main.cpp  inspector.cpp  main.cpp  motion_logger.cpp  video_interaction.cpp
